--- a/proj2/index.html
+++ b/proj2/index.html
@@ -3,5 +3,6 @@
 	</head>
 	<body>
 		Project 2 here
+		<iframe src="https://drive.google.com/drive/my-drive" style="width:600px; height:500px;" frameborder="0"></iframe>
 	</body>
 </html>
