--- a/proj1/index.html
+++ b/proj1/index.html
@@ -3,6 +3,6 @@
 	</head>
 	<body>
 		Project 1 here
-		<iframe src="./proj1WriteUp.pdf" width="100%" height="100%">
+		<iframe src="./Project 1 Write-up.pdf" width="100%" height="100%">
 	</body>
 </html>
