--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -1,7 +1,7 @@
 <html>
-	<head>
-	</head>
-	<body>
-		Project 3-1 here
-	</body>
+ <head>
+ </head>
+ <body>
+  <iframe src="./pj2.pdf" width="100%" height="100%">
+ </body>
 </html>
