--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -2,6 +2,6 @@
  <head>
  </head>
  <body>
-  <iframe src="./pj2.pdf" width="100%" height="100%">
+  <iframe src="./proj3-1.pdf" width="100%" height="100%">
  </body>
 </html>
